FIX: fix overflow text

--- a/src/reset.scss
+++ b/src/reset.scss
@@ -7,3 +7,12 @@
 .mdc-list-item__secondary-text {
     color: temp.$textDarkPrimary !important;
 }
+.mdc-list-item.mdc-list-item--with-two-lines {
+  height: fit-content !important;
+}
+.mdc-list-item__secondary-text,
+.mdc-list-item__content {
+  text-overflow: unset !important;
+  white-space: unset !important;
+  overflow: unset !important;
+}
